kubernetes/employees-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: employees-service
  name: employees-service
  namespace: bolnica-1-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employees-service
  template:
    metadata:
      labels:
        app: employees-service
    spec:
      containers:
        - image: harbor.k8s.elab.rs/bolnica-1/employees:0.0.3
          imagePullPolicy: Always
          name: employees-service
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels: 
    app: employees-service
  name: employees-service
  namespace: bolnica-1-dev
spec:
  ports: 
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: employees-service
  type: ClusterIP
