kubernetes/infirmary-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: infirmary-service
  name: infirmary-service
  namespace: bolnica-1-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infirmary-service
  template:
    metadata:
      labels:
        app: infirmary-service
    spec:
      containers:
        - image: harbor.k8s.elab.rs/bolnica-1/infirmary:0.0.3
          imagePullPolicy: Always
          name: infirmary-service
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  labels: 
    app: infirmary-service
  name: infirmary-service
  namespace: bolnica-1-dev
spec:
  ports: 
    - port: 8084
      protocol: TCP
      targetPort: 8084
  selector:
    app: infirmary-service
  type: ClusterIP
