kubernetes/laboratory-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: laboratory-service
  name: laboratory-service
  namespace: bolnica-1-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laboratory-service
  template:
    metadata:
      labels:
        app: laboratory-service
    spec:
      containers:
        - image: harbor.k8s.elab.rs/bolnica-1/laboratory:0.0.3
          imagePullPolicy: Always
          name: laboratory-service
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  labels: 
    app: laboratory-service
  name: laboratory-service
  namespace: bolnica-1-dev
spec:
  ports: 
    - port: 8083
      protocol: TCP
      targetPort: 8083
  selector:
    app: laboratory-service
  type: ClusterIP
