kubernetes/patients-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: patients-service
  name: patients-service
  namespace: bolnica-1-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patients-service
  template:
    metadata:
      labels:
        app: patients-service
    spec:
      containers:
        - image: harbor.k8s.elab.rs/bolnica-1/patients:0.0.3
          imagePullPolicy: Always
          name: patients-service
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  labels: 
    app: patients-service
  name: patients-service
  namespace: bolnica-1-dev
spec:
  ports: 
    - port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: patients-service
  type: ClusterIP
